# wlantool

./: .gitignore  README.md  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  build-proot.sh  talloc-config.h
app/src/main/cpp/patches/proot/src/extension/sysvipc/: sysvipc_msg.c
app/src/main/java/io/github/bszapp/wlantool/: MainActivity.kt  MainViewModel.kt  WlanToolApplication.kt
app/src/main/java/io/github/bszapp/wlantool/bridge/: RftoolBridge.kt
app/src/main/java/io/github/bszapp/wlantool/terminal/: LaunchMode.kt  TerminalSessionManager.kt
app/src/main/java/io/github/bszapp/wlantool/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rftoolbuilder/: README.md  build.sh  downloads.sh  preview-chroot.sh  preview-proot.sh
rftoolbuilder/src/: librftool.c  rftool.c  talloc-config.h
rftoolbuilder/src/overrides/proot/src/extension/sysvipc/: sysvipc_shm.c
rftoolbuilder/src/overrides/proot/src/syscall/: rlimit.c
rftoolbuilder/src/overrides/proot/src/tracee/: seccomp.c
rftoolbuilder/src/shims/linux/: net.h
rftoolbuilder/src/shims/sys/: queue.h
rftoolbuilder/src/wlantool/: scan.py
